--- a/Resources/Private/Templates/Produkte/Ajax.html
+++ b/Resources/Private/Templates/Produkte/Ajax.html
@@ -3,74 +3,79 @@
 
 <f:section name="main">
 
-<f:comment><f:debug>{parameters}</f:debug></f:comment>
-<div class="generated-products">
-    <div class="ms-infos01">Anzahl Elemente: {elements}</div>
-    <div class="ms-infos02">Seite <span class="ms-page">{page}</span> von <span class="ms-pages">{pages}</span></div>
+    <f:comment><f:debug>{parameters}</f:debug></f:comment>
+    <div class="generated-products">
+        <div class="ms-infos01">Anzahl Elemente: {elements}</div>
+        <div class="ms-infos02">Seite <span class="ms-page">{page}</span> von <span class="ms-pages">{pages}</span></div>
 
 
-    <f:for each="{produkte}" as="produkt">
-        <div class="col-sm-12 col-xs-12">
-            <div class="small-frame teaser-result-container">
-                <div class="col-sm-4 result-teaser-image">
+        <f:for each="{produkte}" as="produkt">
+            <div class="row">
+                <div class="small-frame teaser-result-container col-sm-12">
+                    <div class="col-sm-4 result-teaser-image">
 
-                    <f:if condition="{produkt.image}">
-                        <f:then>
-                            <f:image src="{produkt.image.uid}" treatIdAsReference="1" width="500" height="" absolute="1" />
-                        </f:then>
-                        <f:else>
-                            <img src="http://www.mattig-schauer.at/typo3temp/pics/63b67ff478.jpg" />
+                        <f:if condition="{produkt.image}">
+                            <f:then>
+                                <f:image src="{produkt.image.uid}" treatIdAsReference="1" width="500" height="" absolute="1" />
+                            </f:then>
+                            <f:else>
+                                <img src="http://www.mattig-schauer.at/typo3temp/pics/63b67ff478.jpg" />
 
-                        </f:else>
-                    </f:if>
+                            </f:else>
+                        </f:if>
 
+                    </div>
+                    <div class="col-sm-8 result-teaser-text">
+                        <p style="margin-bottom: 0px;">{produkt.type}</p>
+                        <h5>Außenbereich</h5>
+
+                        <f:if condition="{produkt.productfile}">
+                            <f:then>
+                                <f:link.page pageUid="{f:uri.image(src:produkt.productfile.uid,treatIdAsReference:1)}" target="_blank" style="width: 100%;">Download</f:link.page>
+                            </f:then>
+                            <f:else>
+
+                            </f:else>
+                        </f:if>
+
+                        <a class="readMore-Text">Details</a>
+
+                        <f:link.page pageUid="{pageUid}" additionalParams="{tx_rmmattigschauer_msproducts: {produkt : produkt.uid}}" style="width: 100%;">Details Test</f:link.page>
+
+
+                    </div>
                 </div>
-                <div class="col-sm-8 result-teaser-text">
-                    <p style="margin-bottom: 0px;">{produkt.type}</p>
-                    <h5>Außenbereich</h5>
+            </div>
+            <div class="big-frame info-container col-sm-12">
 
-                    <f:if condition="{produkt.productfile}">
-                        <f:then>
-                            <f:link.page pageUid="{f:uri.image(src:produkt.productfile.uid,treatIdAsReference:1)}" target="_blank" style="width: 100%;">Download</f:link.page>
-                        </f:then>
-                        <f:else>
+                <div class="row">
 
-                        </f:else>
-                    </f:if>
 
-                    <a class="readMore-Text">Details</a>
-                    
-                    <f:link.page pageUid="{pageUid}" additionalParams="{tx_rmmattigschauer_msproducts: {produkt : produkt.uid}}" style="width: 100%;">Details Test</f:link.page>
-                        
-                    
+                    <div class="col-sm-6 result-inner-text">
+                        <f:format.raw>{produkt.techdata}</f:format.raw>
+                    </div>
+                    <div class="col-sm-6 result-inner-picture">
+
+                        <f:if condition="{produkt.image}">
+                            <f:then>
+                                <f:image src="{produkt.image.uid}" treatIdAsReference="1" width="500" height="" absolute="1" />
+                            </f:then>
+                            <f:else>
+                                <img src="http://www.mattig-schauer.at/typo3temp/pics/63b67ff478.jpg" />
+
+                            </f:else>
+                        </f:if>
+
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="big-frame info-container" style="width: 1188px;">
-            <div class="col-sm-8 result-inner-text">
-                <f:format.raw>{produkt.techdata}</f:format.raw>
-            </div>
-            <div class="col-sm-4 result-inner-picture">
 
-                <f:if condition="{produkt.image}">
-                    <f:then>
-                        <f:image src="{produkt.image.uid}" treatIdAsReference="1" width="500" height="" absolute="1" />
-                    </f:then>
-                    <f:else>
-                        <img src="http://www.mattig-schauer.at/typo3temp/pics/63b67ff478.jpg" />
+        </f:for>
 
-                    </f:else>
-                </f:if>
+        <input type="hidden" id="ms-pages" value="{pages}">
+        <input type="hidden" id="ms-elements" value="{elements}">
 
-            </div>
-        </div>
+    </div>
 
-    </f:for>
-
-    <input type="hidden" id="ms-pages" value="{pages}">
-    <input type="hidden" id="ms-elements" value="{elements}">
-	
-</div>
-	
 </f:section>
 </html>
