--- a/Resources/Private/Templates/Produkte/List.html
+++ b/Resources/Private/Templates/Produkte/List.html
@@ -34,7 +34,7 @@
 
         <div class="col-sm-6 col-xs-12">
             <div class="option-filter">
-                <h5 id="toggle-result-view"><span class="glyphicon glyphicon-th-large"></span></h5>
+                <!--h5 id="toggle-result-view"><span class="glyphicon glyphicon-th-large"></span></h5-->
                 <div id="show-5" class="btn btn-default max-items">5</div>
                 <div id="show-10" class="btn btn-default max-items">10</div>
                 <div id="show-25" class="btn btn-default max-items">25</div>
@@ -47,9 +47,10 @@
 
     <div class="row filter">
         <div class="col-sm-12 col-xs-12">
+            <div class="ms-infos01">{elements} Uhren gefunden.</div>
             <div class="page-turn-button">
                 <button class="ms_previous glyphicon glyphicon-arrow-left"></button>
-                {counter}
+                 <div class="ms-infos02">Seite <span class="ms-page">1</span> von <span class="ms-pages">{pages}</span></div>
                 <button class="ms_next glyphicon glyphicon-arrow-right"></button>
             </div>
         </div>
@@ -59,8 +60,8 @@
 
     <div class="generated-products last-box">
         
-       <div class="ms-infos01">Anzahl Elemente: {elements}</div>
-   	    <div class="ms-infos02">Seite <span class="ms-page">1</span> von <span class="ms-pages">{pages}</span></div>
+
+
 
         <f:for each="{produkte}" as="produkt">
             <div class="row">
